[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/window_border.png" type="Texture" id=1]
[ext_resource path="res://assets/colored_transparent_packed.png" type="Texture" id=2]
[ext_resource path="res://scripts/arrow_controller.gd" type="Script" id=3]
[ext_resource path="res://scripts/rhythm_controller.gd" type="Script" id=4]
[ext_resource path="res://scripts/rhythm_game.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 448, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 496, 320, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 464, 320, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 448, 320, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 480, 320, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 496, 336, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 464, 336, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 448, 336, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 480, 336, 16, 16 )

[node name="rhythm_game" type="Node2D"]
script = ExtResource( 5 )

[node name="window_border" type="Sprite" parent="."]
position = Vector2( 235, 134 )
texture = ExtResource( 1 )

[node name="char_left" type="Sprite" parent="."]
position = Vector2( 70, 131 )
scale = Vector2( 5, 5 )
texture = SubResource( 9 )

[node name="char_right" type="Sprite" parent="."]
position = Vector2( 407, 135 )
scale = Vector2( 5, 5 )
texture = SubResource( 10 )

[node name="arrow_controller" type="Node2D" parent="."]
position = Vector2( 234, 34 )
script = ExtResource( 3 )

[node name="left_arrow_outline" type="Sprite" parent="arrow_controller"]
position = Vector2( -68, 0 )
scale = Vector2( 2, 2 )
texture = SubResource( 5 )

[node name="right_arrow_outline" type="Sprite" parent="arrow_controller"]
position = Vector2( 68, 0 )
scale = Vector2( 2, 2 )
texture = SubResource( 6 )

[node name="up_arrow_outline" type="Sprite" parent="arrow_controller"]
position = Vector2( 22, 0 )
scale = Vector2( 2, 2 )
texture = SubResource( 7 )

[node name="down_arrow_outline" type="Sprite" parent="arrow_controller"]
position = Vector2( -22, 0 )
scale = Vector2( 2, 2 )
texture = SubResource( 8 )

[node name="rhythm_controller" type="Node2D" parent="."]
position = Vector2( 234, 226 )
script = ExtResource( 4 )

[node name="left_arrow" type="Sprite" parent="rhythm_controller"]
visible = false
position = Vector2( -68, 0 )
scale = Vector2( 2, 2 )
texture = SubResource( 1 )
region_rect = Rect2( 496, 336, 16, 16 )

[node name="right_arrow" type="Sprite" parent="rhythm_controller"]
visible = false
position = Vector2( 68, 0 )
scale = Vector2( 2, 2 )
texture = SubResource( 2 )

[node name="up_arrow" type="Sprite" parent="rhythm_controller"]
visible = false
position = Vector2( 22, 0 )
scale = Vector2( 2, 2 )
texture = SubResource( 3 )

[node name="down_arrow" type="Sprite" parent="rhythm_controller"]
visible = false
position = Vector2( -22, 0 )
scale = Vector2( 2, 2 )
texture = SubResource( 4 )
